# IntensitySegmenter

./: CMakeLists.txt  IntensitySegmenter.cxx  IntensitySegmenter.xml  README.md
Testing/: CMakeLists.txt
Testing/Data/: Greyscale_presurg.gipl.gz.md5  RangeWithHoles-defaultLabelTest.txt  Segmentation_presurg_IntensitySegmenterDefaultRange.nii.gz.md5  TestDefaultLabelValueOutputVolume.nrrd.md5  TestFloatIntensityRange.txt  TestFloatIntensityRangeInputVolume.nrrd.md5  TestFloatIntensityRangeOutputVolume.nrrd.md5
